# exoclaw-plugins

./: .gitignore  README.md  mise.toml  pyproject.toml
.github/workflows/: build.yml  pr.yml  release.yml
docs/: upstream-mapping.md
nanobot/: __init__.py  app.py
nanobot/agent/: __init__.py  conversation.py  loop.py  memory.py
nanobot/agent/tools/: __init__.py  protocol.py  registry.py
nanobot/bus/: __init__.py  protocol.py  queue.py
nanobot/channels/: __init__.py  base.py  discovery.py  manager.py  protocol.py
nanobot/cli/: commands.py
nanobot/config/: schema.py
nanobot/heartbeat/: service.py
nanobot/providers/: __init__.py  protocol.py  types.py  utils.py
nanobot/utils/: __init__.py
scripts/: mp_test.py
tests/: test_commands.py  test_consolidate_offset.py  test_heartbeat_service.py  test_loop_save_turn.py  test_memory_consolidation_types.py  test_message_tool_suppress.py  test_task_cancel.py  test_tool_validation.py
