[project]
name = "nanobot-ai"
version = "0.1.4.post3"
description = "A lightweight personal AI assistant framework"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "nanobot contributors"}
]
keywords = ["ai", "agent", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.20.0,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "croniter>=6.0.0,<7.0.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "mcp>=1.26.0,<2.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "chardet>=3.0.2,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
nanobot = "nanobot.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanobot"]

[tool.hatch.build.targets.wheel.sources]
"nanobot" = "nanobot"

# Include non-Python files in skills and templates
[tool.hatch.build]
include = [
    "nanobot/**/*.py",
    "nanobot/templates/**/*.md",
    "nanobot/skills/**/*.md",
    "nanobot/skills/**/*.sh",
]

[tool.hatch.build.targets.sdist]
include = [
    "nanobot/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "TID251"]
ignore = ["E501"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"nanobot.bus.queue.MessageBus" = {msg = "Use Bus from nanobot.bus.protocol instead of the concrete MessageBus. Only nanobot/app.py may import MessageBus as the default implementation."}
"nanobot.providers.base" = {msg = "nanobot.providers.base has been removed. Use nanobot.providers.protocol.LLMProvider and nanobot.providers.types for the shared types."}
"nanobot.providers.litellm_provider" = {msg = "Concrete providers have been removed from core. Use a provider package (e.g. nanobot-provider-litellm) instead."}
"nanobot.providers.registry" = {msg = "nanobot.providers.registry has been removed. Provider selection is now the responsibility of the provider package."}

[tool.ruff.lint.per-file-ignores]
# These files legitimately reference the concrete MessageBus
"nanobot/app.py" = ["TID251"]          # provides MessageBus as the default impl
"nanobot/bus/__init__.py" = ["TID251"] # re-exports it as part of the bus module
"nanobot/cli/commands.py" = ["TID251"] # deprecated gateway shim
"tests/*" = ["TID251"]                 # tests use the concrete impl directly

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
