[project]
name = "nanobot-ai"
version = "0.1.4.post3"
description = "A lightweight personal AI assistant framework"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "nanobot contributors"}
]
keywords = ["ai", "agent", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "loguru>=0.7.3,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanobot"]

# Include non-Python files
[tool.hatch.build]
include = [
    "nanobot/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "nanobot/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "TID251"]
ignore = ["E501"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"nanobot.bus.queue.MessageBus" = {msg = "Use Bus from nanobot.bus.protocol instead of the concrete MessageBus. Only nanobot/app.py may import MessageBus as the default implementation."}
"nanobot.providers.base" = {msg = "nanobot.providers.base has been removed. Use nanobot.providers.protocol.LLMProvider and nanobot.providers.types for the shared types."}
"nanobot.providers.litellm_provider" = {msg = "Concrete providers have been removed from core. Use a provider package (e.g. nanobot-provider-litellm) instead."}
"nanobot.providers.registry" = {msg = "nanobot.providers.registry has been removed. Provider selection is now the responsibility of the provider package."}

[tool.ruff.lint.per-file-ignores]
# These files legitimately reference the concrete MessageBus
"nanobot/app.py" = ["TID251"]          # provides MessageBus as the default impl
"nanobot/bus/__init__.py" = ["TID251"] # re-exports it as part of the bus module
"tests/*" = ["TID251"]                 # tests use the concrete impl directly

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
